[package]
name = "ubiquitous_pancake"
version = "0.1.0"
authors = ["C1FR1 <C1FR1.stkcps@gmail.com>", "Gnarwhal <gnarlynarwhal8@gmail.com>", "Rewinded <signedrewind@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"
